--- a/index.html
+++ b/index.html
@@ -187,6 +187,32 @@
             font-size: 10px;
             margin: 0 2px 2px 0;
         }
+
+        /* Responsive Design for Mobile */
+        @media (max-width: 768px) {
+
+            body,
+            html {
+                overflow: auto;
+            }
+
+            #app {
+                flex-direction: column;
+                height: auto;
+            }
+
+            #sidebar {
+                width: 100%;
+                order: 2;
+                box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
+            }
+
+            #map {
+                width: 100%;
+                height: 60vh;
+                order: 1;
+            }
+        }
     </style>
 </head>
 
