--- a/index.html
+++ b/index.html
@@ -194,23 +194,24 @@
             body,
             html {
                 overflow: auto;
+                height: auto;
             }
 
             #app {
-                flex-direction: column;
+                display: flex;
+                flex-direction: column-reverse;
                 height: auto;
             }
 
             #sidebar {
                 width: 100%;
-                order: 2;
                 box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
             }
 
             #map {
                 width: 100%;
-                height: 60vh;
-                order: 1;
+                height: 450px;
+                flex: none;
             }
         }
     </style>
