--- a/index.html
+++ b/index.html
@@ -286,10 +286,25 @@
 
         function processLoadedData(data) {
             allData = data;
+
+            // Calculate win count per shop (Name + Address)
+            const shopWins = {};
+            data.forEach(item => {
+                const key = item.n + '|' + item.a;
+                shopWins[key] = (shopWins[key] || 0) + 1;
+            });
+            // Attach individual shop win count to each record
+            data.forEach(item => {
+                item.totalWins = shopWins[item.n + '|' + item.a];
+            });
+
             document.getElementById('totalDataCount').innerText = data.length.toLocaleString();
             if (data.length > 0) {
-                const maxR = Math.max(...data.map(d => d.r));
+                const rounds = data.map(d => d.r);
+                const maxR = Math.max(...rounds);
+                const minR = Math.min(...rounds);
                 document.getElementById('maxRound').value = maxR;
+                document.getElementById('minRound').value = minR;
             }
             applyFilters();
         }
