--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         #app {
             display: flex;
             width: 100%;
-            height: 100%;
+            height: 100vh;
         }
 
         #map {
@@ -70,13 +70,15 @@
 
         #sidebar {
             width: 320px;
+            height: 100%;
             background: var(--card);
             box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
-            z-index: 10;
+            z-index: 100;
             display: flex;
             flex-direction: column;
             padding: 20px;
             overflow-y: auto;
+            flex-shrink: 0;
         }
 
         h1 {
@@ -190,28 +192,33 @@
 
         /* Responsive Design for Mobile */
         @media (max-width: 768px) {
-
-            body,
-            html {
-                overflow: auto;
-                height: auto;
-            }
-
             #app {
-                display: flex;
-                flex-direction: column-reverse;
+                flex-direction: column;
+                /* Changed from column-reverse to column */
                 height: auto;
+                min-height: 100vh;
+                overflow: auto;
             }
 
             #sidebar {
                 width: 100%;
+                height: auto;
+                flex: none;
+                order: 2;
                 box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
             }
 
             #map {
                 width: 100%;
-                height: 450px;
+                height: 400px;
                 flex: none;
+                order: 1;
+            }
+
+            body,
+            html {
+                overflow: auto;
+                height: auto;
             }
         }
     </style>
