--- a/index.html
+++ b/index.html
@@ -60,12 +60,16 @@
             display: flex;
             width: 100%;
             height: 100vh;
+            flex-direction: row;
+            /* Default PC: Sidebar Left */
         }
 
         #map {
             flex: 1;
             height: 100%;
             background: #eee;
+            order: 2;
+            /* PC: Map Right */
         }
 
         #sidebar {
@@ -79,6 +83,8 @@
             padding: 20px;
             overflow-y: auto;
             flex-shrink: 0;
+            order: 1;
+            /* PC: Sidebar Left */
         }
 
         h1 {
