--- a/index.html
+++ b/index.html
@@ -57,19 +57,11 @@
         }
 
         #app {
-            display: flex;
-            width: 100%;
+            display: flex !important;
+            width: 100vw;
             height: 100vh;
             flex-direction: row;
-            /* Default PC: Sidebar Left */
-        }
-
-        #map {
-            flex: 1;
-            height: 100%;
-            background: #eee;
-            order: 2;
-            /* PC: Map Right */
+            overflow: hidden;
         }
 
         #sidebar {
@@ -84,7 +76,15 @@
             overflow-y: auto;
             flex-shrink: 0;
             order: 1;
-            /* PC: Sidebar Left */
+            /* PC: First */
+        }
+
+        #map {
+            flex: 1;
+            height: 100%;
+            background: #eee;
+            order: 2;
+            /* PC: Second */
         }
 
         h1 {
@@ -197,10 +197,10 @@
         }
 
         /* Responsive Design for Mobile */
-        @media (max-width: 768px) {
+        /* Responsive Design for Mobile (Phone only) */
+        @media (max-width: 640px) {
             #app {
                 flex-direction: column;
-                /* Changed from column-reverse to column */
                 height: auto;
                 min-height: 100vh;
                 overflow: auto;
@@ -211,6 +211,7 @@
                 height: auto;
                 flex: none;
                 order: 2;
+                /* Mobile: Sidebar Bottom */
                 box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
             }
 
@@ -219,6 +220,7 @@
                 height: 400px;
                 flex: none;
                 order: 1;
+                /* Mobile: Map Top */
             }
 
             body,
