--- a/index.html
+++ b/index.html
@@ -196,7 +196,62 @@
             margin: 0 2px 2px 0;
         }
 
-        /* Responsive Design for Mobile */
+        /* GPS Pulse Animation */
+        @keyframes pulse {
+            0% {
+                transform: scale(0.5);
+                opacity: 1;
+            }
+
+            100% {
+                transform: scale(3);
+                opacity: 0;
+            }
+        }
+
+        .pulse {
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            background: rgba(25, 118, 210, 0.5);
+            border-radius: 50%;
+            animation: pulse 2s infinite;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            pointer-events: none;
+        }
+
+        /* GPS Button Style */
+        .gps-button {
+            position: absolute;
+            bottom: 30px;
+            right: 30px;
+            width: 50px;
+            height: 50px;
+            background: #fff;
+            border: 2px solid var(--primary);
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            z-index: 1000;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+            transition: all 0.2s;
+        }
+
+        .gps-button:hover {
+            transform: scale(1.1);
+            background: #f0f0f0;
+        }
+
+        .gps-button svg {
+            width: 24px;
+            height: 24px;
+            fill: var(--primary);
+        }
+
         /* Responsive Design for Mobile (Phone only) */
         @media (max-width: 640px) {
             #app {
@@ -223,12 +278,38 @@
                 /* Mobile: Map Top */
             }
 
+            /* GPS Pulse Animation */
+            @keyframes pulse {
+                0% {
+                    transform: scale(0.5);
+                    opacity: 1;
+                }
+
+                100% {
+                    transform: scale(3);
+                    opacity: 0;
+                }
+            }
+
+            .pulse {
+                position: absolute;
+                width: 40px;
+                height: 40px;
+                background: rgba(25, 118, 210, 0.4);
+                border-radius: 50%;
+                animation: pulse 2s infinite;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                margin: 0;
+                pointer-events: none;
+            }
+
             body,
             html {
                 overflow: auto;
                 height: auto;
             }
-        }
     </style>
 </head>
 
@@ -276,7 +357,14 @@
                 </div>
             </div>
         </div>
-        <div id="map"></div>
+        <div id="map">
+            <div class="gps-button" onclick="requestMyLocation()" title="내 위치 찾기">
+                <svg viewBox="0 0 24 24">
+                    <path
+                        d="M12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm8.94 3c-.46-4.17-3.77-7.48-7.94-7.94V1h-2v2.06C6.83 3.52 3.52 6.83 3.06 11H1v2h2.06c.46 4.17 3.77 7.48 7.94 7.94V23h2v-2.06c4.17-.46 7.48-3.77 7.94-7.94H23v-2h-2.06zM12 19c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z" />
+                </svg>
+            </div>
+        </div>
     </div>
 
     <script>
@@ -472,6 +560,84 @@
                 markers.push(marker);
             });
             clusterer.addMarkers(markers);
+        }
+
+        let myLocationMarker = null;
+
+        function requestMyLocation() {
+            if (!navigator.geolocation) {
+                alert("이 브라우저에서는 위치 정보를 사용할 수 없습니다.");
+                return;
+            }
+
+            // GPS Permission & Fetch
+            navigator.geolocation.getCurrentPosition(
+                (pos) => {
+                    const lat = pos.coords.latitude;
+                    const lng = pos.coords.longitude;
+                    const center = new kakao.maps.LatLng(lat, lng);
+
+                    map.setCenter(center);
+                    map.setLevel(5); // Zoom in
+
+                    // Add/Update Blue Dot Marker
+                    if (!myLocationMarker) {
+                        myLocationMarker = new kakao.maps.CustomOverlay({
+                            position: center,
+                            content: `
+                                <div style="position:relative;">
+                                    <div class="pulse"></div>
+                                    <div style="width:16px; height:16px; background:#1976d2; border:2px solid #fff; border-radius:50%; box-shadow:0 0 10px rgba(0,0,0,0.5); position:relative; z-index:2; transform: translate(-50%, -50%);"></div>
+                                </div>
+                            `,
+                            map: map,
+                            zIndex: 1001
+                        });
+                    } else {
+                        myLocationMarker.setPosition(center);
+                        myLocationMarker.setMap(map);
+                    }
+
+                    findNearestShop(lat, lng);
+                },
+                (err) => {
+                    let msg = "위치 정보를 가져오는 데 실패했습니다.";
+                    if (err.code === 1) msg = "위치 정보 권한이 거부되었습니다. 설정에서 허용해 주세요.";
+                    alert(msg);
+                },
+                { enableHighAccuracy: true, timeout: 5000, maximumAge: 0 }
+            );
+        }
+
+        function getDistance(lat1, lon1, lat2, lon2) {
+            const R = 6371; // km
+            const dLat = (lat2 - lat1) * Math.PI / 180;
+            const dLon = (lon2 - lon1) * Math.PI / 180;
+            const a = Math.sin(dLat / 2) * Math.sin(dLat / 2) +
+                Math.cos(lat1 * Math.PI / 180) * Math.cos(lat2 * Math.PI / 180) *
+                Math.sin(dLon / 2) * Math.sin(dLon / 2);
+            const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
+            return R * c;
+        }
+
+        function findNearestShop(lat, lng) {
+            if (typeof allData === 'undefined' || allData.length === 0) return;
+
+            let minDistance = Infinity;
+            let nearest = null;
+
+            allData.forEach(shop => {
+                const dist = getDistance(lat, lng, shop.lat, shop.lng);
+                if (dist < minDistance) {
+                    minDistance = dist;
+                    nearest = shop;
+                }
+            });
+
+            if (nearest) {
+                const distStr = minDistance < 1 ? Math.round(minDistance * 1000) + "m" : minDistance.toFixed(1) + "km";
+                alert(`📍 가장 가까운 당첨 명당:\n'${nearest.n}' (${distStr} 거리)`);
+            }
         }
     </script>
 </body>
