UI Fix: Set InfoWindow zIndex to 1500 to prevent overlap

--- a/index.html
+++ b/index.html
@@ -889,7 +889,8 @@
 
                 const infowindow = new kakao.maps.InfoWindow({
                     content: content,
-                    removable: true
+                    removable: true,
+                    zIndex: 1500 // Ensure popup is on top of markers
                 });
 
                 kakao.maps.event.addListener(marker, 'click', () => {
