--- a/index.html
+++ b/index.html
@@ -616,8 +616,17 @@
                 <div id="adContent">
                     <h2 style="color:#d32f2f;">✨ 당첨 기운 분석 중... ✨</h2>
                     <div style="margin:20px 0; font-size:50px;">⏳</div>
-                    <p>잠시만 기다려주세요.<br>명당의 데이터를 분석하고 있습니다.</p>
-                    <div style="margin-top:20px; color:#666; font-size:12px;">(당첨 기운을 모으는 중입니다...)</div>
+                    <p style="font-size:16px; font-weight:bold; line-height:1.6;">
+                        <a href="#" onclick="shareToKakao()"
+                            style="color:#1976d2; text-decoration:underline;">www.k-inov.com</a> 링크를<br>
+                        카카오친구에게 추천하시면<br>
+                        <span style="color:#d32f2f;">2%의 적립금</span>이 생깁니다.
+                    </p>
+                    <p style="margin-top:10px; font-size:14px; color:#666;">
+                        역대 1위 번호를 바탕으로<br>
+                        1위 확률을 높여드립니다.
+                    </p>
+                    <div style="margin-top:20px; color:#aaa; font-size:12px;">(당첨 기운을 모으는 중입니다...)</div>
                 </div>
                 <div id="resultContent" style="display:none;">
                     <h2 style="color:#1976d2;">🎉 추천 번호 생성 완료! 🎉</h2>
@@ -1013,10 +1022,10 @@
             adContent.style.display = 'block';
             resultContent.style.display = 'none';
 
-            // Simulate Ad Delay (3 seconds)
+            // Simulate Ad Delay (6 seconds)
             setTimeout(() => {
                 showResult();
-            }, 3000);
+            }, 6000);
         }
 
         function closeModal() {
@@ -1146,6 +1155,10 @@
         function openDirections(lat, lng, name) {
             const url = `https://map.kakao.com/link/to/${encodeURIComponent(name)},${lat},${lng}`;
             window.open(url, '_blank');
+        }
+
+        function shareToKakao() {
+            alert("카카오톡 공유 기능은 다음 단계에서 구현될 예정입니다! \n(현재는 UI 및 시간 연장 확인 단계입니다)");
         }
     </script>
 </body>
