--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
             <div class="modal-content">
                 <span class="modal-close" onclick="closeModal()">&times;</span>
                 <div id="adContent" style="width:100%; height:400px; padding:0; overflow:hidden;">
-                    <iframe src="https://www.k-inov.com" style="width:100%; height:100%; border:none;"
+                    <iframe src="https://www.k-inov.co.kr" style="width:100%; height:100%; border:none;"
                         title="K-INOV"></iframe>
                     <div style="text-align:center; padding:5px; font-size:12px; color:#666;">
                         (당첨 기운을 모으는 중입니다... <span id="timerDisplay">6</span>초)
@@ -1161,7 +1161,7 @@
 
         function shareToKakao() {
             // Open the actual website as requested
-            window.open("http://www.k-inov.com", "_blank");
+            window.open("http://www.k-inov.co.kr", "_blank");
         }
     </script>
 </body>
