--- a/index.html
+++ b/index.html
@@ -613,9 +613,14 @@
         <div id="adModal" class="modal">
             <div class="modal-content">
                 <span class="modal-close" onclick="closeModal()">&times;</span>
-                <div id="adContent" style="width:100%; height:400px; padding:0; overflow:hidden;">
-                    <iframe src="https://www.k-inov.co.kr" style="width:100%; height:100%; border:none;"
-                        title="K-INOV"></iframe>
+                <div id="adContent"
+                    style="width:100%; height:420px; padding:0; overflow:hidden; display:flex; flex-direction:column;">
+                    <div style="background:#fae100; color:#3c1e1e; padding:8px; text-align:center; font-weight:bold; cursor:pointer; font-size:14px;"
+                        onclick="shareToKakao()">
+                        📢 카카오톡 공유하기를 하시면 1등번호 확률이 높아집니다 (클릭)
+                    </div>
+                    <iframe src="https://www.k-inov.co.kr" style="width:100%; flex:1; border:none;"
+                        title="KINOV"></iframe>
                     <div style="text-align:center; padding:5px; font-size:12px; color:#666;">
                         (당첨 기운을 모으는 중입니다... <span id="timerDisplay">6</span>초)
                     </div>
