--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
         src="//dapi.kakao.com/v2/maps/sdk.js?appkey=a6b27b6dab16c7e3459bb9589bf1269d&libraries=clusterer"
         onerror="handleScriptError()"></script>
     <!-- Kakao SDK for Sharing -->
-    <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.2/kakao.min.js"
-        integrity="sha384-TiCUE00h+f9AgOsWq5QRFKJdXhSWPqRKN3zzL0VKJb0Xd+Qp7fQbWlYf7yyN1dWD"
-        crossorigin="anonymous"></script>
+    <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.2/kakao.min.js"></script>
     <style>
         :root {
             --primary: #d32f2f;
