--- a/index.html
+++ b/index.html
@@ -616,33 +616,35 @@
             <div class="modal-content">
                 <span class="modal-close" onclick="closeModal()">&times;</span>
                 <div id="adContent"
-                    style="width:100%; height:420px; padding:0; overflow:hidden; display:flex; flex-direction:column;">
-                    <div style="background:#fae100; color:#3c1e1e; padding:8px; text-align:center; font-weight:bold; cursor:pointer; font-size:14px;"
+                    style="width:100%; height:420px; padding:20px; overflow:hidden; display:flex; flex-direction:column; align-items:center; justify-content:center; background:linear-gradient(135deg, #667eea 0%, #764ba2 100%);">
+                    <div style="background:#fae100; color:#3c1e1e; padding:12px 20px; text-align:center; font-weight:bold; cursor:pointer; font-size:16px; border-radius:8px; margin-bottom:20px; box-shadow:0 4px 6px rgba(0,0,0,0.1);"
                         onclick="shareToKakao()">
                         📢 카카오톡 공유하기를 하시면 1등번호 확률이 높아집니다 (클릭)
                     </div>
-                    <iframe src="https://www.k-inov.co.kr" style="width:100%; flex:1; border:none;"
-                        title="KINOV"></iframe>
-                    <div style="text-align:center; padding:5px; font-size:12px; color:#666;">
-                        (당첨 기운을 모으는 중입니다... <span id="timerDisplay">6</span>초)
+                    <div style="text-align:center; color:white; font-size:18px; line-height:1.8;">
+                        <h2 style="margin:0 0 20px 0; font-size:28px;">🎰 당첨의 기운을 모으는 중...</h2>
+                        <p style="margin:10px 0;">이 판매점의 역대 당첨 데이터를 분석하고 있습니다</p>
+                        <p style="margin:10px 0; font-size:24px; font-weight:bold;">⏱️ <span id="timerDisplay">6</span>초
+                        </p>
                     </div>
-                </div>
-                <div id="resultContent" style="display:none;">
-                    <h2 style="color:#1976d2;">🎉 추천 번호 생성 완료! 🎉</h2>
-                    <p style="font-size:13px; color:#666; margin-bottom:10px;">
-                        이 명당은 과거 <strong id="paramHCount" style="color:#d32f2f;">0</strong>번의 1등을 배출했습니다.<br>
-                        (<span id="paramRounds"></span> 등)
-                    </p>
-                    <div class="lucky-balls" id="luckyBalls">
-                        <!-- Balls go here -->
-                    </div>
-                    <p style="font-size:12px; color:#888;">* 재미로만 봐주세요. 과도한 구매는 금물!</p>
-                    <button class="btn-apply btn-navi" style="margin-top:10px;" onclick="goToShop()">
-                        🚗 지금 당장 사러 가기 (길찾기)
-                    </button>
                 </div>
             </div>
+            <div id="resultContent" style="display:none;">
+                <h2 style="color:#1976d2;">🎉 추천 번호 생성 완료! 🎉</h2>
+                <p style="font-size:13px; color:#666; margin-bottom:10px;">
+                    이 명당은 과거 <strong id="paramHCount" style="color:#d32f2f;">0</strong>번의 1등을 배출했습니다.<br>
+                    (<span id="paramRounds"></span> 등)
+                </p>
+                <div class="lucky-balls" id="luckyBalls">
+                    <!-- Balls go here -->
+                </div>
+                <p style="font-size:12px; color:#888;">* 재미로만 봐주세요. 과도한 구매는 금물!</p>
+                <button class="btn-apply btn-navi" style="margin-top:10px;" onclick="goToShop()">
+                    🚗 지금 당장 사러 가기 (길찾기)
+                </button>
+            </div>
         </div>
+    </div>
     </div>
 
     <script>
