--- a/index.html
+++ b/index.html
@@ -497,23 +497,31 @@
         }
 
         .modal-content {
-            background-color: #fff;
-            padding: 25px;
-            border-radius: 15px;
+            background-color: transparent;
+            padding: 0;
+            border-radius: 16px;
             width: 90%;
             max-width: 600px;
             text-align: center;
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5);
             position: relative;
+            overflow: hidden;
         }
 
         .modal-close {
             position: absolute;
-            top: 10px;
-            right: 15px;
-            font-size: 24px;
+            top: 15px;
+            right: 20px;
+            font-size: 32px;
             cursor: pointer;
-            color: #aaa;
+            color: white;
+            z-index: 10;
+            text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+            transition: transform 0.2s;
+        }
+
+        .modal-close:hover {
+            transform: scale(1.1);
         }
 
         .lucky-balls {
