Design: Add gradient background to result content

--- a/index.html
+++ b/index.html
@@ -637,17 +637,20 @@
                     </div>
                 </div>
             </div>
-            <div id="resultContent" style="display:none;">
-                <h2 style="color:#1976d2;">🎉 추천 번호 생성 완료! 🎉</h2>
-                <p style="font-size:13px; color:#666; margin-bottom:10px;">
-                    이 명당은 과거 <strong id="paramHCount" style="color:#d32f2f;">0</strong>번의 1등을 배출했습니다.<br>
+            <div id="resultContent"
+                style="display:none; background:linear-gradient(135deg, #667eea 0%, #764ba2 100%); padding:40px 20px; min-height:420px;">
+                <h2 style="color:white; text-shadow:0 2px 4px rgba(0,0,0,0.2);">🎉 추천 번호 생성 완료! 🎉</h2>
+                <p style="font-size:13px; color:rgba(255,255,255,0.95); margin-bottom:10px;">
+                    이 명당은 과거 <strong id="paramHCount" style="color:#fae100;">0</strong>번의 1등을 배출했습니다.<br>
                     (<span id="paramRounds"></span> 등)
                 </p>
                 <div class="lucky-balls" id="luckyBalls">
                     <!-- Balls go here -->
                 </div>
-                <p style="font-size:12px; color:#888;">* 재미로만 봐주세요. 과도한 구매는 금물!</p>
-                <button class="btn-apply btn-navi" style="margin-top:10px;" onclick="goToShop()">
+                <p style="font-size:12px; color:rgba(255,255,255,0.8);">* 재미로만 봐주세요. 과도한 구매는 금물!</p>
+                <button class="btn-apply btn-navi"
+                    style="margin-top:10px; background:#fae100; color:#3c1e1e; border:none; padding:12px 30px; border-radius:25px; font-weight:bold; box-shadow:0 4px 12px rgba(0,0,0,0.2);"
+                    onclick="goToShop()">
                     🚗 지금 당장 사러 가기 (길찾기)
                 </button>
             </div>
