Add KINOV Mall promotional section to modal

--- a/index.html
+++ b/index.html
@@ -632,8 +632,15 @@
                     <div style="text-align:center; color:white; font-size:18px; line-height:1.8;">
                         <h2 style="margin:0 0 20px 0; font-size:28px;">🎰 당첨의 기운을 모으는 중...</h2>
                         <p style="margin:10px 0;">이 판매점의 역대 당첨 데이터를 분석하고 있습니다</p>
-                        <p style="margin:10px 0; font-size:24px; font-weight:bold;">⏱️ <span id="timerDisplay">6</span>초
+                        <p style="margin:10px 0 20px 0; font-size:24px; font-weight:bold;">⏱️ <span
+                                id="timerDisplay">6</span>초
                         </p>
+                        <!-- KINOV Mall Promotional Section -->
+                        <div style="background:white; border-radius:12px; padding:20px; margin-top:20px; box-shadow:0 4px 12px rgba(0,0,0,0.2); cursor:pointer;"
+                            onclick="window.open('https://www.k-inov.co.kr', '_blank')">
+                            <img src="kinov_mall_promo.webp" alt="KINOV Mall"
+                                style="width:100%; max-width:400px; border-radius:8px;">
+                        </div>
                     </div>
                 </div>
             </div>
