--- a/index.html
+++ b/index.html
@@ -636,10 +636,10 @@
                                 id="timerDisplay">6</span>초
                         </p>
                         <!-- KINOV Mall Promotional Section -->
-                        <div style="background:white; border-radius:12px; padding:20px; margin-top:20px; box-shadow:0 4px 12px rgba(0,0,0,0.2); cursor:pointer;"
+                        <div style="background:transparent; border-radius:12px; padding:10px; margin-top:20px; cursor:pointer;"
                             onclick="window.open('https://www.k-inov.co.kr', '_blank')">
-                            <img src="kinov_mall_promo.webp" alt="KINOV Mall"
-                                style="width:100%; max-width:400px; border-radius:8px;">
+                            <img src="kinovmall.png" alt="KINOV Mall"
+                                style="width:100%; max-width:450px; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,0.2);">
                         </div>
                     </div>
                 </div>
