--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
                         <!-- KINOV Mall Promotional Section -->
                         <div style="background:transparent; border-radius:12px; padding:10px; margin-top:20px; cursor:pointer;"
                             onclick="window.open('https://www.k-inov.co.kr', '_blank')">
-                            <img src="kinovmall.png" alt="KINOV Mall"
+                            <img src="kinovhead.jpg" alt="KINOV Mall"
                                 style="width:100%; max-width:450px; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,0.2);">
                         </div>
                     </div>
