Fix: Use feed type with button for reliable k-inov.co.kr link in KakaoTalk share

--- a/index.html
+++ b/index.html
@@ -1207,15 +1207,27 @@
                     console.log('[Kakao Share] Kakao SDK already initialized');
                 }
 
-                // Prepare share data - using text type to ensure link works
+                // Prepare share data - feed type with button for reliable link
                 const shareData = {
-                    objectType: 'text',
-                    text: '🎰 KINOV 로또 명당 지도\n\n역대 1등 당첨 판매점을 한눈에! 당신의 행운을 찾아보세요.\n\n지금 바로 KINOV Mall을 방문하세요!',
-                    link: {
-                        mobileWebUrl: 'https://www.k-inov.co.kr',
-                        webUrl: 'https://www.k-inov.co.kr'
+                    objectType: 'feed',
+                    content: {
+                        title: '🎰 KINOV 로또 명당 지도',
+                        description: '역대 1등 당첨 판매점을 한눈에! 당신의 행운을 찾아보세요.\n\n지금 바로 KINOV Mall을 방문하세요!',
+                        imageUrl: 'https://www.k-inov.co.kr/favicon.ico',
+                        link: {
+                            mobileWebUrl: 'https://www.k-inov.co.kr',
+                            webUrl: 'https://www.k-inov.co.kr'
+                        }
                     },
-                    buttonTitle: 'KINOV Mall 방문하기'
+                    buttons: [
+                        {
+                            title: 'KINOV Mall 방문하기',
+                            link: {
+                                mobileWebUrl: 'https://www.k-inov.co.kr',
+                                webUrl: 'https://www.k-inov.co.kr'
+                            }
+                        }
+                    ]
                 };
 
                 console.log('[Kakao Share] Sending share data:', shareData);
