--- a/index.html
+++ b/index.html
@@ -1207,13 +1207,12 @@
                     console.log('[Kakao Share] Kakao SDK already initialized');
                 }
 
-                // Prepare share data - feed type with button for reliable link
+                // Prepare share data - NO IMAGE to ensure k-inov.co.kr link works
                 const shareData = {
                     objectType: 'feed',
                     content: {
                         title: '🎰 KINOV 로또 명당 지도',
                         description: '역대 1등 당첨 판매점을 한눈에! 당신의 행운을 찾아보세요.\n\n지금 바로 KINOV Mall을 방문하세요!',
-                        imageUrl: 'https://www.k-inov.co.kr/favicon.ico',
                         link: {
                             mobileWebUrl: 'https://www.k-inov.co.kr',
                             webUrl: 'https://www.k-inov.co.kr'
