--- a/index.html
+++ b/index.html
@@ -567,17 +567,39 @@
 
         /* Mini Ball for Recent Rounds */
         .mini-ball {
-            width: 20px;
-            height: 20px;
+            width: 24px;
+            height: 24px;
             border-radius: 50%;
             display: inline-flex;
             align-items: center;
             justify-content: center;
-            font-size: 10px;
-            font-weight: bold;
+            font-size: 11px;
+            font-weight: 800;
             color: white;
-            text-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
-            margin-right: 2px;
+            margin-right: 3px;
+            box-shadow: inset -2px -2px 4px rgba(0, 0, 0, 0.2);
+        }
+
+        .mini-ball.one {
+            background: #fbc400;
+            color: #333;
+            text-shadow: none;
+        }
+
+        .mini-ball.two {
+            background: #69c8f2;
+        }
+
+        .mini-ball.three {
+            background: #ff7272;
+        }
+
+        .mini-ball.four {
+            background: #aaaaaa;
+        }
+
+        .mini-ball.five {
+            background: #b0d840;
         }
 
         .recent-row {
