--- a/index.html
+++ b/index.html
@@ -1315,12 +1315,14 @@
             closeModal();
         }
 
-        // Close modal when clicking outside
-        window.onclick = function (event) {
-            const modal = document.getElementById('adModal');
-            if (event.target == modal) {
-                closeModal();
-            }
+        // Close modal when clicking outside - Direct listener for better mobile support
+        const modalEl = document.getElementById('adModal');
+        if (modalEl) {
+            modalEl.addEventListener('click', function (event) {
+                if (event.target === modalEl) {
+                    closeModal();
+                }
+            });
         }
 
         // Handle Back Button
