--- a/index.html
+++ b/index.html
@@ -668,6 +668,25 @@
                 font-size: 12px !important;
                 padding: 12px !important;
             }
+
+            .modal-content {
+                width: 95% !important;
+                max-width: 95% !important;
+                margin: 0 auto !important;
+            }
+
+            #adContent,
+            #resultContent {
+                padding: 15px !important;
+                width: 100% !important;
+                box-sizing: border-box !important;
+                /* Ensure padding doesn't add to width */
+            }
+
+            .modal-close {
+                right: 10px !important;
+                top: 10px !important;
+            }
         }
 
         .btn-sm {
