--- a/index.html
+++ b/index.html
@@ -689,6 +689,97 @@
             }
         }
 
+        /* Selection Menu Styles (Global) */
+        .selection-menu {
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+            width: 100%;
+            margin-top: 10px;
+        }
+
+        .selection-card {
+            background: rgba(255, 255, 255, 0.9);
+            border-radius: 12px;
+            padding: 15px;
+            display: flex;
+            align-items: center;
+            gap: 15px;
+            cursor: pointer;
+            transition: transform 0.2s, box-shadow 0.2s;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            text-align: left;
+        }
+
+        .selection-card:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+            background: white;
+        }
+
+        .selection-icon {
+            font-size: 24px;
+            background: #f0f4f8;
+            min-width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .selection-info {
+            flex: 1;
+        }
+
+        .selection-title {
+            font-size: 16px;
+            font-weight: bold;
+            color: #333;
+            margin-bottom: 2px;
+            display: block;
+        }
+
+        .selection-desc {
+            font-size: 12px;
+            color: #666;
+            display: block;
+        }
+
+        /* Loading Animation */
+        .loader-container {
+            display: none;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100%;
+            color: white;
+            text-align: center;
+        }
+
+        .spinner {
+            width: 40px;
+            height: 40px;
+            border: 4px solid rgba(255, 255, 255, 0.3);
+            border-radius: 50%;
+            border-top-color: #fae100;
+            animation: spin 1s ease-in-out infinite;
+            margin-bottom: 20px;
+        }
+
+        @keyframes spin {
+            to {
+                transform: rotate(360deg);
+            }
+        }
+
+        /* Input Container for Dream/Zodiac */
+        .input-container {
+            display: none;
+            width: 100%;
+            text-align: center;
+        }
+
         .btn-sm {
             background-color: #555;
             color: white;
